# R-Type

./: .gitignore  CMakeLists.txt  Igame.hpp  README.md  vcpkg.json
.github/workflows/: compilation.yml  doc_push.yml
Client/: CMakeLists.txt  Cooldown.cpp  Cooldown.h  client.cpp  client.h  common.h  game.cpp  game.h  main.cpp  spectator.cpp  spectator.h
Client/Elements/: Button.cpp  Button.h  Chat.cpp  Chat.h  Element.h  Image.cpp  Image.h  Login.cpp  Login.h  Text.cpp  Text.h  TextInput.cpp  TextInput.h  UserCard.cpp  UserCard.h
Client/Scenes/: Background.cpp  Background.h  Lobby.cpp  Lobby.h  LobbyItem.cpp  LobbyItem.h  LobbyList.cpp  LobbyList.h  Login.cpp  Login.h
Client/SpritesMooves/: ground.json
Client/components/: Button.cpp  Button.h  Login.cpp  Login.h  TextInput.cpp  TextInput.h
Client/includes/: AnimationData.hpp  ButtonElement.hpp  ColliderData.hpp  FontElement.hpp  InetrfaceElement.hpp  SoundData.hpp  SoundElement.hpp  SpriteData.hpp  SpriteElement.hpp  TextData.hpp  TextElement.hpp  TextureElement.hpp  TransformData.hpp
Client/src/: Button.hpp  GraphicClient.hpp  Rttype.cpp  Rttype.hpp  client.cpp  main.cpp  wall.cpp  wall.hpp
Cocs-game/: CMakeLists.txt  Cocs-game.cpp  Cocs-game.hpp  protocol.h
Cocs-game/class/: Ball.cpp  Ball.h  Cooldown.cpp  Cooldown.h  Player.cpp  Player.h
Engine/: CMakeLists.txt
Engine/inc/: haze.hpp
Engine/src/: hello.cpp
Haze/: CMakeLists.txt
Haze/AssetManager/: AssetManager.hpp
Haze/Component/: Component.hpp  ComponentGfx.cpp  ComponentGfx.hpp
Haze/ComponentList/: ComponentList.cpp  ComponentList.hpp
Haze/DynLib/: DynLib.cpp  DynLib.hpp
Haze/Engine/: Engine.cpp  Engine.hpp
Haze/Entity/: Entity.cpp  Entity.hpp
Haze/Factory/: Factory.cpp  Factory.hpp
Haze/IDisplay/: IDisplay.hpp  SdlDisplay.cpp  SdlDisplay.hpp  SfDisplay.cpp  SfDisplay.hpp  sfDisplay.cpp
Haze/Pipeline/: CorePipeline.hpp  GfxPipeline.cpp  GfxPipeline.hpp  IPipeline.hpp
Haze/Pipeline/core/: CorePipeline.cpp  CorePipeline.hpp
Haze/Pipeline/gfx/: GfxPipeline.cpp  GfxPipeline.hpp
Haze/System/: System.cpp  System.hpp  SystemCore.hpp  SystemGfx.cpp  SystemGfx.hpp
Haze/System/core/: SystemCore.cpp  SystemCore.hpp
Haze/System/gfx/: SystemGfx.cpp  SystemGfx.hpp
Haze/inc/: componentData.hpp  haze-core.hpp  haze-graphics.hpp  haze.hpp  inputs.hpp  logger.hpp  matrix.hpp  protocol.hpp
Network/: CMakeLists.txt  net_client.h  net_common.h  net_connection.h  net_data_channel.h  net_datagram.h  net_message.h  net_server.h  net_tsqueue.h
NetworkTest/: CMakeLists.txt  client.cpp  common.h  server.cpp
Protocols/: CMakeLists.txt  data.h  lobby.h  protocols.h
Rtype/: CMakeLists.txt  GameStructures.h  Hitbox.h  Rtype.cpp  Rtype.hpp  RtypeJsonHandler.cpp  config.h  note.md  processJsonFilesInDirectory.cpp  protocol.h
Rtype/Boss/: Boss.cpp  Boss.h  BossData.h
Rtype/Cooldown/: Cooldown.cpp  Cooldown.h
Rtype/Enemy/: Enemy.cpp  Enemy.h  EnemyData.h
Rtype/Explosion/: Explosion.cpp  Explosion.h  ExplosionData.h
Rtype/Map/: Map.cpp  Map.h  MapData.h
Rtype/MapHandling/: MapHandling.cpp  MapHandling.h
Rtype/Missile/: Missile.cpp
Rtype/Paralax/: Paralax.cpp  Paralax.h
Rtype/Parallax/: Parallax.cpp  Parallax.h
Rtype/Player/: Player.cpp  Player.h
Rtype/Shot/: Shot.cpp  Shot.h  ShotData.h
Rtype/SpritesMooves/: explosion.json  shoot.json
Rtype/Wall/: Wall.cpp  Wall.h  WallData.h
Rtype/class/: Boss.cpp  Boss.h  BossData.h  Cooldown.cpp  Cooldown.h  Enemy.cpp  Enemy.h  EnemyData.h  Explosion.cpp  Explosion.h  MapHandling.cpp  MapHandling.h  Missile.cpp  Missile.h  Paralax.cpp  Paralax.h  Player.cpp  Player.h  Wall.cpp  Wall.h  Wall.hpp  wall.cpp  wall.hpp
Rtype/inc/: ButtonElement.hpp.old  SpriteData.hpp
Rtype/includes/: AnimationData.hpp  ColliderData.hpp  TextData.hpp  TransformData.hpp
Rtype/src/: wall.cpp  wall.hpp
Server/: CMakeLists.txt  Room.cpp  Room.h  main.cpp  server.cpp  server.h
Server/src/: common.h  main.cpp  server.hpp
assets/AnimationJSON/: boss.json  canon.json  enemy.json  explosion.json  explosion2.json  ground.json  map.json  player.json  shot.json  spaceship.json  spaceship1.json  spaceship2.json  spaceship3.json  spaceship4.json  test.json
assets/enemies/: red_fly.json  vortex.json
assets/json_files/: spaceship1.json  spaceship2.json  spaceship3.json  spaceship4.json  test.json
assets/json_files/bosses/: dobkeratops.json  dobkeratops_tummy.json
assets/json_files/enemies/: bleu_cercle.json  canon.json  cercle.json  green_fly.json  green_wall.json  red_fly.json  vortex.json  walking_blue.json  walking_orange.json  white_robot.json
assets/json_files/explosions/: explosion.json  explosion2.json  explosion3.json
assets/json_files/maps/: level_0.json  level_1.json  level_2.json
assets/json_files/shoots/: shot.json
assets/json_files/shots/: fireball.json  red_ball.json  red_bar.json  shot.json  shot_red.json
assets/json_files/walls/: ground.json  ground_night.json
assets/maps/: level_1.json
docs/: FirstPage.md
docs/Haze/: Component.md  ComponentGfx.md  Engine.md  Entity.md  Haze introduction.md
docs/Protocol/: Protocol.md
docs/Rtype/: Create Enemy.md  Rtype.md
map_editor/: Makefile  map.json
map_editor/include/: BossData.h  ButtonElement.hpp  EnemyData.h  InetrfaceElement.hpp  file.hpp
map_editor/src/: file.cpp
