# cmake_minimum_required(VERSION 3.16)
# project(NetworkTest)

# add_executable(client
#         client.cpp
#         common.h
# )

# target_link_libraries(client PUBLIC Network)
# target_include_directories(client PUBLIC .)

# add_executable(server
#         server.cpp
#         common.h
# )

# target_link_libraries(server PUBLIC Network)
# target_include_directories(server PUBLIC .)
